Initial cross site scripting working!

--- a/index.html
+++ b/index.html
@@ -3,13 +3,26 @@
     <head>
 		<meta charset="utf-8">
         <script type="text/javascript" src="d3.v3.js"></script>
+		<script type="text/javascript" src="jsonp.js"></script>
 		<script type="text/javascript" src="index.js"></script>
+		<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
 		
     <body>
+		<script>
+		$(document).ready(function(){
+			
+			StartApp();
+		});
+		
+		
+		</script>
+		
+		
+		
 		<div id="titleBox">
 			<p>Test Title</p>
 		</div>
