Added to continents.json
Also cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -14,29 +14,20 @@
     <body>
 		<script>
 		$(document).ready(function(){
-			
 			StartApp();
 		});
-		
-		
 		</script>
-		
-		
-		
+
 		<div id="titleBox">
 			<p>Test Title</p>
 		</div>
-		
+
 		<div class="PageContent">
 			<div class="CreaturesBox">
 				<ul class="CreaturesList"></ul>
 			</div>
-			<div class="chartContainer">
 
-
-			</div>
+			<div class="chartContainer"></div>
 		</div>
-
-		
     </body>
 </html>
