--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="jsonp.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 		<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="d3.slider.js"></script>
 		<link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
