--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<script type="text/javascript" src="index.js"></script>
 		<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="d3.slider.js"></script>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="index.css"/>
+		<link rel="stylesheet" type="text/css" href="d3.slider.css" media="screen"/>
     </head>
 
 		
@@ -28,6 +29,8 @@
 			</div>
 
 			<div class="chartContainer"></div>
+
+			<div id="slider"></div>
 		</div>
     </body>
 </html>
