--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
 		<meta charset="utf-8">
         <script type="text/javascript" src="d3.v3.js"></script>
-		<script type="text/javascript" src="jsonp.js"></script>
 		<script type="text/javascript" src="index.js"></script>
 		<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="d3.slider.js"></script>
+		<script type="text/javascript" src="creatureMapping.js"></script>
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 		<link rel="stylesheet" type="text/css" href="d3.slider.css" media="screen"/>
     </head>
