Implement new scaling method for map Seperated code a bit

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="index.js"></script>
 		<script type="text/javascript" src="jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="d3.slider.js"></script>
+		<script type="text/javascript" src="eol-gbif.js"></script>
 		<script type="text/javascript" src="creatureMapping.js"></script>
 		<link rel="stylesheet" type="text/css" href="index.css"/>
 		<link rel="stylesheet" type="text/css" href="d3.slider.css" media="screen"/>
