Makin it look pretty

--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
 		</script>
 
 		<div id="titleBox">
-			<p>Test Title</p>
+			<div>Map of Species</div>
 		</div>
 
 		<div class="PageContent">
 			<div class="CreaturesBox">
+				<div id="CreaturesBoxTitle">Species</div>
 				<div class="CreaturesList"></div>
 			</div>
 
