Test look number 2

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 			</div>
 
 			<div class="chartContainer"></div>
+		</div>
+		
+		<div class="PageContent" id="sliderContent">
 			<div id="slider"></div>
 		</div>
 		
