--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		<link rel="stylesheet" type="text/css" href="css/d3.slider.css" media="screen"/>
 		
 		<!--add jquery ui for auto complete box-->
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-		  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+		<link rel="stylesheet" href="css/jquery-ui.min.css">
+		  <script src="js/jquery-ui.min.js"></script>
     </head>
 
 		
