--- a/index.html
+++ b/index.html
@@ -23,13 +23,7 @@
     <body>
 		<script>
 		$(document).ready(function(){
-			/*$(".chartContainer").css("width", function() {
-				return window.innerWidth - leftOffset + "px";
-			});
-			*/
-			
 
-			
 			var chart = SpeciesMap.init({
 				divSelector: ".chartContainer",
 				xPadding: 0,
@@ -38,12 +32,8 @@
 				height: 500
 			});
 
-			
-			initCallBacks(chart);		
-				
+			initCallBacks(chart);
 
-			
-			
 			//Tick formatter
 			var formatter = d3.format(",.0f");
 			//Initialize slider
@@ -60,6 +50,11 @@
 							});
 			//Render the slider into the div
 			d3.select("#slider").call(slider);
+			/*d3.select("#slider").on("mousemove", function(d, i) {
+				var beginning
+				console.log((d3.mouse(this)[0] - 23));
+				//console.log(976 - (100 * 3.904));
+			});*/
 
 			//Set the current and previous slider values
 			currentSliderVal = -slider.value();
@@ -68,7 +63,6 @@
 
 			chart.loadData();
 			setChart(chart);
-
 		});
 		</script>
 		<div class="CeneteredContent" id="titleBox">
