Made selected species from search box more apparent Move clear species button, it only shows when its needed

--- a/index.html
+++ b/index.html
@@ -78,14 +78,16 @@
 			<form id="searchBar">
 				<label for="search">Search for specie:</label>
 				<input name="search" type="text" id="autocomplete">
-				<button name="clear" type="button" id="clearButton">Clear</button>
 			</form>
 		</div>
 
 		<div class="CeneteredContent PageContent">
 			<div class="CreaturesBox">
 				<div id="CreaturesBoxTitle">Species</div>
-				<div class="CreaturesList"></div>
+				<div id="CreatureBoxListClip">
+					<div class="CreaturesList"></div>
+				</div>
+				<div class="CreaturesBoxControls"></div>
 			</div>
 
 			<div class="chartContainer"></div>
