Fix specie box title on page load

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 			initCallBacks(slider, chart);		
-			
+			updateSpeciesBoxTitle(chart, currentSliderVal);
 			
 			chart.loadData();
 			setChart(chart);
