--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="js/interface.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/index.css"/>
 		<link rel="stylesheet" type="text/css" href="css/lightbox.css"/>
+		<link rel="stylesheet" type="text/css" href="css/wikipedia.css"/>
 		<link rel="stylesheet" type="text/css" href="css/d3.slider.css" media="screen"/>
 		<link rel="stylesheet" href="css/jquery-ui.min.css">
 		<script src="js/jquery-ui.min.js"></script>
