--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <script type="text/javascript" src="js/d3.v3.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+		<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
+		<script type="text/javascript" src="jquery.easing.1.3.js"></script>
 		<script type="text/javascript" src="js/d3.slider.js"></script>
 		<script type="text/javascript" src="js/eol-gbif.js"></script>
 		<script type="text/javascript" src="js/creatureMapping.js"></script>
@@ -19,43 +21,85 @@
     </head>
 
     <body>
-		<script>
-		$(document).ready(function(){
-			var chart = SpeciesMap.init({
-				divSelector: ".chartContainer",
-				xPadding: 0,
-				yPadding: 0,
-				width: 600,
-				height: 500
+   		<script type="text/javascript">
+			$(document).ready(function(){
+				var chart = SpeciesMap.init({
+					divSelector: ".chartContainer",
+					xPadding: 0,
+					yPadding: 0,
+					width: 600,
+					height: 500
+				});
+
+				//Tick formatter
+				var formatter = d3.format(",.0f");
+				//Initialize slider
+				slider = d3.slider()
+								.min(-250)
+								.max(0)
+								.tickValues([-250, -205, -180, -159, -144, -98, -65, 0])
+								.showRange(false)
+								.value(-0.01)
+								.tickFormat(function(d) {
+									return -formatter(d) + "mya";
+								});
+				//Render the slider into the div
+				d3.select("#slider").call(slider);
+		
+				//Set the current and previous slider values
+				currentSliderVal = -slider.value();
+				previousSliderVal = -slider.value();
+
+
+				initCallBacks(slider, chart);		
+				updateSpeciesBoxTitle(chart, currentSliderVal);
+				
+				chart.loadData();
+				setChart(chart);
+				//$('.background').cycle('fade');
+				$('.background').cycle( {
+					timeout: 0,
+					speed: 1000,
+					startingSlide: 0
+				});
 			});
 
-			//Tick formatter
-			var formatter = d3.format(",.0f");
-			//Initialize slider
-			slider = d3.slider()
-							.min(-250)
-							.max(0)
-							.tickValues([-250, -205, -180, -159, -144, -98, -65, 0])
-							.showRange(false)
-							.value(-0.01)
-							.tickFormat(function(d) {
-								return -formatter(d) + "mya";
-							});
-			//Render the slider into the div
-			d3.select("#slider").call(slider);
-	
-			//Set the current and previous slider values
-			currentSliderVal = -slider.value();
-			previousSliderVal = -slider.value();
+			var currentImage = 0, previousImage = 0;
+			function setBackground() {
+				var value = -slider.value();
 
+				if (value >= 0 && value < 65)
+					currentImage = 0;
+				else if (value >= 65 && value < 98)
+					currentImage = 1;
+				else if (value >= 98 && value < 144)
+					currentImage = 2;
+				else if (value >= 144 && value < 159)
+					currentImage = 3;
+				else if (value >= 159 && value < 180)
+					currentImage = 4;
+				else if (value >= 180 && value < 205)
+					currentImage = 5;
+				else if (value >= 205 && value < 250)
+					currentImage = 6;
 
-			initCallBacks(slider, chart);		
-			updateSpeciesBoxTitle(chart, currentSliderVal);
-			
-			chart.loadData();
-			setChart(chart);
-		});
+				if (currentImage != previousImage){
+					previousImage = currentImage;
+					$('.background').cycle(currentImage);
+				}
+			}
 		</script>
+
+		<div class="background">
+			<img src="images/background1.jpg" width="100%" height="100%"/>
+			<img src="images/background2.jpg" width="100%" height="100%"/>
+			<img src="images/background3.jpg" width="100%" height="100%"/>
+			<img src="images/background4.jpg" width="100%" height="100%"/>
+			<img src="images/background5.jpg" width="100%" height="100%"/>
+			<img src="images/background6.jpg" width="100%" height="100%"/>
+			<img src="images/background7.jpg" width="100%" height="100%"/>
+		</div>
+
 		<div class="CeneteredContent" id="titleBox">
 			<div id="titleText">Map of Species</div>
 		</div>
