Added Creature Load and More Creatures

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
 		<div class="CeneteredContent" id="titleBox">
 			<div id="titleText">Map of Species</div>
+			<div id="creatureLoadCount"></div>
 		</div>
 		
 		<div class="CeneteredContent" id="navBar">
