Add missing word in about menu Can now click species listing box title to sort list three ways:     by name, least number of remains, and most number of remains
No longer tries to sort creatures as slider is moving, must manually enact sorting
   better performance

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 		<div class="CeneteredContent PageContent">
 			<div class="CreaturesBox">
-				<div id="CreaturesBoxTitle">Species</div>
+				<div id="CreaturesBoxTitle" title="Click to sort listing.">Species</div>
 				<div id="CreatureBoxListClip">
 					<div class="CreaturesList"></div>
 				</div>
@@ -178,7 +178,9 @@
 					</div>
 					
 					<h4 class="aboutSubTitle">Modelling Information:</h4>
-					<div id="aboutMethods" class="TextBoxStuff">The location of each creature is based on where their remains have found in the present day formation of the continents on Earth, with their supposed locations in the past derived from a crude modelling of continental drift.
+					<div id="aboutMethods" class="TextBoxStuff">The location of each creature is based on where their remains have been 
+						found in the present day formation of the continents on Earth, with their supposed locations in the
+						past derived from a crude modelling of continental drift.
 					</div>
 					
 					<h4 class="aboutSubTitle">Created By:</h4>
