--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 		<link rel="stylesheet" type="text/css" href="css/d3.slider.css" media="screen"/>
 		<link rel="stylesheet" href="css/jquery-ui.min.css">
 		<script src="js/jquery-ui.min.js"></script>
-    </head>
-
-    <body>
+		
+		
    		<script type="text/javascript">
 			$(document).ready(function(){
 				var chart = SpeciesMap.init({
@@ -103,11 +102,12 @@
 					$("#titleText").css("background-color", "rgba(0,0,0," + guiAlpha + ")");
 					$("#navBar").css("background-color", "rgba(0,0,0," + guiAlpha + ")");
 					$("#slider").css("background-color", "rgba(0,0,0," + guiAlpha + ")");
-					$("#CreaturesBoxTitle").css("background-color", "rgba(0,0,0," + guiAlpha + ")");
 				}
 			}
 		</script>
+    </head>
 
+    <body>
 		<div class="background">
 			<img src="images/background0.jpg" width="100%" height="100%"/>
 			<img src="images/background1.jpg" width="100%" height="100%"/>
@@ -163,6 +163,7 @@
 					
 				</div>
 				<div class="InfoContent">
+					<div id="infoBoxLoadMsg">Loading Content...</div>
 					<ul id="clusterList" class="resizeableTextBox"></ul>
 					<div id="aboutTextBox"class="resizeableTextBox"></div>	
 				</div>
