--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-		<script type="text/javascript" src="jquery.easing.1.3.js"></script>
+		<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
 		<script type="text/javascript" src="js/d3.slider.js"></script>
 		<script type="text/javascript" src="js/eol-gbif.js"></script>
 		<script type="text/javascript" src="js/creatureMapping.js"></script>
